<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UnifiedToolkitForMCPE</string>
    <string name="setup_title">Initial Setup</string>
    <string name="setup_scripts_title">1. Access to Scripts folder</string>
    <string name="setup_scripts_desc">Please select \'/variable/scripts\' folder</string>
    <string name="setup_button_grant">Grant</string>
    <string name="setup_configs_title">2. Access to Configs folder</string>
    <string name="setup_configs_desc">Please select \'/variable/configs\' folder</string>
    <string name="setup_tg_info">Is your script Open Source? Do you want to protect developer rights? Want to share your script? Contact me on Telegram:</string>
    <string name="setup_tg_link">https://t.me/l3trx</string>
    <string name="setup_button_finish">Finish Setup</string>
    <string name="setup_button_granted">Granted</string>
    <string name="setup_icon_desc">Status icon</string>
    <string name="setup_error_wrong_folder">Wrong folder selected. Expected: \'%1$s\'</string>
    <string name="setup_error_permission_failed">Error: Could not get access to this folder</string>
    <string name="setup_notify_title">3. Notifications (Optional)</string>
    <string name="setup_notify_desc">Allow download status notifications</string>
    <string name="setup_lang_title">Language</string>
    <string name="setup_lang_system">System</string>
    <string name="setup_lang_ru">Русский 🇷🇺</string>
    <string name="setup_lang_en">English 🇬🇧</string>
    <string name="menu_about">About</string>
    <string name="menu_license">License</string>
    <string name="menu_settings">Settings</string>
    <string name="about_title">About App</string>
    <string name="about_label_app_name">Name: %1$s</string>
    <string name="about_label_version">Version: %1$s (%2$s)</string>
    <string name="about_label_package">Package: %1$s</string>
    <string name="about_label_author">Author: %1$s</string>
    <string name="about_label_github">GitHub: %1$s</string>
    <string name="about_author_name">AquaSpoof</string>
    <string name="about_github_url">https://github.com/AquaSpoof/UT-MCPE</string>
    <string name="license_title">License</string>
    <string name="license_name_mit">MIT License</string>
    <string name="license_full_text_mit">Copyright (c) 2025 AquaSpoof\n\nPermission is hereby granted, free of charge, to any person obtaining a copy\nof this software and associated documentation files (the "Software"), to deal\nin the Software without restriction, including without limitation the rights\nto use, copy, modify, merge, publish, distribute, sublicense, and/or sell\ncopies of the Software, and to permit persons to whom the Software is\nfurnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all\ncopies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\nIMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\nFITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\nAUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\nLIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\nOUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\nSOFTWARE.</string>
    <string name="script_list_title">Script List</string>
    <string name="script_button_download">Download</string>
    <string name="detail_loading">Loading...</string>
    <string name="detail_label_author">Author: %1$s</string>
    <string name="detail_label_version">Version: %1$s</string>
    <string name="detail_label_license">License: %1$s</string>
    <string name="detail_label_filename">File: %1$s</string>
    <string name="detail_label_downloads">Downloads: %1$d</string>
    <string name="detail_label_filesize">Size: %1$s</string>
    <string name="detail_label_github">GitHub: %1$s</string>
    <string name="detail_label_websites">Socials: %1$s</string>
    <string name="detail_not_specified">Not specified</string>
    <string name="detail_hashes_server">Hashes (Server)</string>
    <string name="detail_hashes_local">Hashes (Local File)</string>
    <string name="detail_hashes_compare">Compare Hashes</string>
    <string name="script_button_details">Details</string>
    <string name="script_button_update">Update</string>
    <string name="script_button_downloaded">Downloaded</string>
    <string name="script_button_downloading">Downloading...</string>
    <string name="settings_title">Settings</string>
    <string name="settings_lang_title">App Language</string>
    <string name="setup_lang_system_dynamic">System (%1$s)</string>
    <string name="info_title">Open Source Info</string>
    <string name="info_open_source_1">All scripts, configs and other data provided by this app are open source projects.</string>
    <string name="info_open_source_2">UT-MCPE is also open source under the MIT License.</string>
    <string name="info_tg_channel">Official Telegram Channel:</string>
    <string name="info_tg_url">https://t.me/UT_MCPE</string>
    <string name="info_created_by">Created by AquaSpoof Team</string>
    <string name="info_button_continue">To Main Screen</string>
    <string name="main_title">Main Screen</string>
    <string name="main_button_catalog">Variable Catalog</string>
    <string name="category_title">Categories</string>
    <string name="category_button_scripts">Scripts</string>
    <string name="category_button_configs">Configs</string>
    <string name="setup_lang_uk">Українська 🇺🇦</string>
    <string name="setup_lang_be">Беларуская 🇧🇾</string>
    <string name="setup_lang_zh_s">简体中文 🇨🇳</string>
    <string name="setup_lang_zh_t">繁體中文 🇹🇼</string>
    <string name="download_notification_channel_name">Downloads</string>
    <string name="download_notification_title">Downloading Script</string>
    <string name="download_complete">Download Complete</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_progress_text">%1$s / %2$s (%3$d%%)</string>
    <string name="download_speed_text">%1$s/s</string>
    <string name="download_cancel">Cancel</string>
    <string name="detail_hash_md5">MD5: %1$s</string>
    <string name="detail_hash_sha1">SHA1: %1$s</string>
    <string name="detail_hash_sha256">SHA256: %1$s</string>
    <string name="detail_hash_crc32">CRC32: %1$s</string>
    <string name="detail_hash_na">N/A</string>
    <string name="push_notification_channel_name">General Notifications</string>
    <string name="auth_title_login">Вход</string>
    <string name="auth_hint_email">Адрес электронной почты</string>
    <string name="auth_hint_password">Пароль</string>
    <string name="auth_button_forgot_password">Забыли пароль?</string>
    <string name="auth_button_login">Войти</string>
    <string name="auth_button_go_to_register">Нет аккаунта? Зарегистрироваться</string>

    <string name="auth_title_register">Создание аккаунта</string>
    <string name="auth_hint_confirm_password">Подтвердите пароль</string>
    <string name="auth_button_register">Зарегистрироваться</string>
    <string name="auth_button_go_to_login">Уже есть аккаунт? Войти</string>
</resources>