<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    tools:context=".InfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_title"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/info_open_source_1"
        android:textSize="16sp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info_open_source_2"
        android:textSize="16sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/github_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_github_url"
        android:autoLink="web"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/info_tg_channel"
        android:textSize="16sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tg_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/info_tg_url"
        android:autoLink="web"
        android:gravity="center"
        android:textSize="16sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_created_by"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textSize="14sp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/info_button_continue" />
</LinearLayout>