<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".CategoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/category_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/button_scripts"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/category_button_scripts"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_configs"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/category_button_configs"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>